Correction de fautes de frappe dans les constructeurs et mise à jour des noms de méthodes pour une meilleure cohérence. Ajout de nouveaux fichiers RTF et images pour les questions.