@@ -11,12 +11,15 @@ import java.awt.event.FocusAdapter;
 import java.awt.event.FocusEvent;
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
+import java.io.ByteArrayOutputStream;
 import java.text.NumberFormat;
 import java.text.ParseException;
 import java.util.ArrayList;
 import javax.swing.*;
+import javax.swing.border.Border;
 import javax.swing.text.*;
 import javax.swing.text.rtf.RTFEditorKit;
+import java.awt.Color;
 
 import src.Controleur;
 import src.Metier.Notion;
@@ -26,33 +29,30 @@ import java.util.List;
 
 public class PanelCreationQuestion extends JPanel implements ActionListener, ItemListener {
 	private Controleur           ctrl;
-	private JComboBox<Ressource> listeRessources;
-	private JComboBox<Notion>    listeNotions;
+
+	private JComboBox<Ressource> ddlstRessources;
+	private JComboBox<Notion>    ddlstNotions;
+	private JComboBox<String>    ddlstTypes;
 	private JButton              btnTresFacile, btnFacile, btnMoyen, btnDifficile;
 	private JButton              btnConfirmer;
-	private JButton				 btnGras, btnSouligner, btnAjouterImage, btnAjouterRessComp;
-	private JComboBox<String>    listeTypes;
-	private JLabel               labelMessage, labelResultat;
-	private ArrayList<Ressource> ressources;
-	private ArrayList<Notion>    notions;
+	private JButton				 btnGras, btnItalique, btnAjouterImage, btnAjouterRessComp;
+	private JTextField           txtPoints, txtTemps;
+	private JEditorPane epEnonce;
+	private JEditorPane epExplication;
+
+	private ArrayList<Ressource> lstRessources;
+	private ArrayList<Notion>    lstNotions;
+	private List<String>         lstLiens;
 	private String				 imageFond;
-
-	private JTextField champPoints;
-	private JTextField champTemps;
-
-	private JEditorPane txtaQuestion;
-	private JEditorPane txtexQuestion;
-	// A envoyer aux 3 autres panels
-
-	private int    		 difficulte;
 	private String 		 notion;
+	private int    		 difficulte;
 	private int    		 temps;
 	private int    		 points;
-	private List<String> lstLiens;
-
+	private Border               bordureDefaut;
+	private Border               bordureSelect;
 
 	private FrameCreationQuestion frameCreationQuestion;
-	private PanelBanque panelBanque;
+	private PanelBanque           panelBanque;
 
 	private static final ImageIcon[] IMAGES_DIFFICULTE = {
 			new ImageIcon("java/data/Images/imgDif/TF.png"),
@@ -62,19 +62,20 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 	};
 
 	public PanelCreationQuestion(FrameCreationQuestion frameCreationQuestion, Controleur ctrl ,PanelBanque panelBanque, Ressource resChoisie, Notion notionChoisie) {
-		this.ctrl             = ctrl;
-		this.panelBanque      = panelBanque;
+		this.ctrl                  = ctrl;
+		this.panelBanque           = panelBanque;
 		this.frameCreationQuestion = frameCreationQuestion;
+		this.lstRessources            = this.ctrl.getRessources();
+		this.lstNotions               = this.ctrl.getNotions();
+		this.lstLiens              = new ArrayList<>(5);
 
-		this.ressources       = this.ctrl.getRessources();
-		this.notions          = this.ctrl.getNotions();
-
-		this.lstLiens = new ArrayList<>(5);
+		this.bordureDefaut = BorderFactory.createLineBorder(Color.BLACK, 5);
+		this.bordureSelect = BorderFactory.createLineBorder(Color.RED  , 5);
 
 		Ressource placeHolder = new Ressource(" "," ");
 
-		this.ressources.add(0,placeHolder);
-		this.notions   .add(0,new Notion(" ",placeHolder));
+		this.lstRessources.add(0,placeHolder);
+		this.lstNotions   .add(0,new Notion(" ",placeHolder));
 
 		setLayout(new BorderLayout());
 
@@ -94,22 +95,22 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		numberFormatter.setMinimum(0);
 		numberFormatter.setOverwriteMode(true);
 
-		this.champPoints  = new JFormattedTextField(numberFormatter);
-		this.champPoints.setColumns(10);
-		JLabel labelTemps = new JLabel("Temps de réponse (min:sec) :");
+		this.txtPoints  = new JFormattedTextField(numberFormatter);
+		this.txtPoints.setColumns(10);
 
+		JLabel labelTemps = new JLabel("Temps de réponse (min:sec) :");
 		try {
 			MaskFormatter timeFormatter = new MaskFormatter("##:##");
 			timeFormatter.setPlaceholderCharacter('0');
-			this.champTemps = new JFormattedTextField(timeFormatter);
-			this.champTemps.setText("00:30"); // Valeur initiale
+			this.txtTemps = new JFormattedTextField(timeFormatter);
+			this.txtTemps.setText("00:30"); // Valeur initiale
 
-			this.champTemps.addPropertyChangeListener("value", evt -> secondeValide());
+			this.txtTemps.addPropertyChangeListener("value", evt -> secondeValide());
 		} catch (ParseException e) {
 			e.printStackTrace();
 		}
 
-		this.champTemps.addFocusListener(new FocusAdapter()
+		this.txtTemps.addFocusListener(new FocusAdapter()
 		{
 			@Override
 			public void focusLost(FocusEvent e) {
@@ -118,9 +119,9 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		});
 
 		panelConfiguration.add(labelPoints);
-		panelConfiguration.add(this.champPoints);
+		panelConfiguration.add(this.txtPoints);
 		panelConfiguration.add(labelTemps);
-		panelConfiguration.add(this.champTemps);
+		panelConfiguration.add(this.txtTemps);
 
 		this.add(panelConfiguration, BorderLayout.NORTH);
 
@@ -128,16 +129,14 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		JPanel panelText = new JPanel(new GridLayout(4,1));
 
 		JLabel lblIntituleQuestion = new JLabel("Question : ");
-		this.txtaQuestion = new JEditorPane();
-		this.txtaQuestion.setEditorKit(new StyledEditorKit()); // Permet la gestion des styles
-		this.txtaQuestion.setEditable(true); // Rendre éditable
+		this.epEnonce = new JEditorPane();
+		this.epEnonce.setEditorKit(new StyledEditorKit()); // Permet la gestion des styles
+		this.epEnonce.setEditable(true); // Rendre éditable
+
 		JLabel lblExpliquationQuestion = new JLabel("Explication : ");
-		this.txtexQuestion = new JEditorPane();
-		this.txtexQuestion.setEditorKit(new StyledEditorKit()); // Permet la gestion des styles
-		this.txtexQuestion.setEditable(true); // Rendre éditable
-
-
-
+		this.epExplication = new JEditorPane();
+		this.epExplication.setEditorKit(new StyledEditorKit()); // Permet la gestion des styles
+		this.epExplication.setEditable(true); // Rendre éditable
 
 		JPanel panelCentrale = new JPanel(new GridLayout(1, 2, 5, 5));
 		panelCentrale.setBorder(BorderFactory.createTitledBorder("Sélection"));
@@ -146,28 +145,27 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		JPanel panelLabels    = new JPanel(new GridLayout(3, 1, 5, 5));
 		JPanel panelDonnées   = new JPanel(new GridLayout(3, 1, 5, 5));
 
+		// ComboBox de Ressource
 		JLabel labelRessource = new JLabel("Ressource :");
-		this.listeRessources  = new JComboBox<Ressource>();
-		for(Ressource ressource : this.ressources)
+		this.ddlstRessources  = new JComboBox<Ressource>();
+		for(Ressource ressource : this.lstRessources)
 		{
-			this.listeRessources.addItem(ressource);
+			this.ddlstRessources.addItem(ressource);
 		}
-		this.listeRessources.setSelectedIndex(0);
+		this.ddlstRessources.setSelectedIndex(0);
+		this.ddlstRessources.addItemListener(this);
 
-		this.listeRessources.addItemListener(this);
-
+		// ComboBox de Notion
 		JLabel labelNotion = new JLabel("Notion :");
-		this.listeNotions  = new JComboBox<>();
-
-		this.notions = this.ctrl.getNotionsParRessource(this.ressources.get(0));
-		for(Notion notion : this.notions)
+		this.ddlstNotions  = new JComboBox<>();
+		this.lstNotions = this.ctrl.getNotionsParRessource(this.lstRessources.getFirst());
+		for(Notion notion : this.lstNotions)
 		{
-			this.listeNotions.addItem(notion);
+			this.ddlstNotions.addItem(notion);
 		}
-		this.listeNotions.setSelectedIndex(0);
-
-		this.listeNotions.setEnabled(false);
-		this.listeNotions.addItemListener(this);
+		this.ddlstNotions.setSelectedIndex(0);
+		this.ddlstNotions.setEnabled(false);
+		this.ddlstNotions.addItemListener(this);
 
 		JLabel labelNiveau = new JLabel("Difficulté :");
 		JPanel panelNiveau = new JPanel(new FlowLayout());
@@ -177,8 +175,8 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		this.btnMoyen      		= new JButton(IMAGES_DIFFICULTE[2]);
 		this.btnDifficile  		= new JButton(IMAGES_DIFFICULTE[3]);
 		this.btnGras	   		= new JButton("Gras");
-		this.btnSouligner  		= new JButton("Souligner");
-		this.btnAjouterImage 	= new JButton("Ajouter image au texte");
+		this.btnItalique  		= new JButton("Italic");
+		this.btnAjouterImage 	= new JButton("Ajouter une image");
 		this.btnAjouterRessComp = new JButton("Ajouter des fichiers complémentaires");
 
 		Dimension d1 = new Dimension( 75,  75);
@@ -188,9 +186,14 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		this.btnMoyen     		.setPreferredSize(d1);
 		this.btnDifficile 		.setPreferredSize(d1);
 		this.btnGras	  		.setPreferredSize(d2);
-		this.btnSouligner 		.setPreferredSize(d2);
+		this.btnItalique 		.setPreferredSize(d2);
 		this.btnAjouterImage	.setPreferredSize(d2);
 		this.btnAjouterRessComp .setPreferredSize(d2);
+
+		this.btnTresFacile.setBorder(this.bordureDefaut);
+		this.btnFacile    .setBorder(this.bordureDefaut);
+		this.btnMoyen     .setBorder(this.bordureDefaut);
+		this.btnDifficile .setBorder(this.bordureDefaut);
 
 		this.btnTresFacile.setEnabled(false);
 		this.btnFacile    .setEnabled(false);
@@ -202,7 +205,7 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		this.btnMoyen     		.addActionListener(this);
 		this.btnDifficile 		.addActionListener(this);
 		this.btnGras	  		.addActionListener(this);
-		this.btnSouligner 		.addActionListener(this);
+		this.btnItalique 		.addActionListener(this);
 		this.btnAjouterImage	.addActionListener(this);
 		this.btnAjouterRessComp .addActionListener(this);
 
@@ -211,20 +214,20 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		panelNiveau.add(this.btnMoyen);
 		panelNiveau.add(this.btnDifficile);
 		panelText.add  (this.btnGras);
-		panelText.add  (this.btnSouligner);
+		panelText.add  (this.btnItalique);
 
 		panelText.add(lblIntituleQuestion);
-		panelText.add(txtaQuestion);
+		panelText.add(epEnonce);
 		panelText.add(lblExpliquationQuestion);
-		panelText.add(txtexQuestion);
+		panelText.add(epExplication);
 
 		panelText.add(this.btnAjouterImage);
 		panelText.add(this.btnAjouterRessComp);
 
 		panelLabels.add (labelRessource);
-		panelDonnées.add(this.listeRessources);
+		panelDonnées.add(this.ddlstRessources);
 		panelLabels.add (labelNotion);
-		panelDonnées.add(this.listeNotions);
+		panelDonnées.add(this.ddlstNotions);
 		panelLabels.add (labelNiveau);
 		panelDonnées.add(panelNiveau);
 
@@ -241,7 +244,7 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		panelType.setBorder(BorderFactory.createTitledBorder("Type de Question"));
 
 		JLabel labelType = new JLabel("Type :");
-		this.listeTypes  = new JComboBox<>(new String[]
+		this.ddlstTypes  = new JComboBox<>(new String[]
 				{ "QCM REP. UNIQUE","QCM REP. MULTIPLE", "EntiteAssociation","Elimination" }
 		);
 
@@ -249,30 +252,30 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		this.btnConfirmer.addActionListener(this);
 
 		panelType.add(labelType);
-		panelType.add(this.listeTypes);
+		panelType.add(this.ddlstTypes);
 		panelType.add(this.btnConfirmer);
 
 		add(panelType, BorderLayout.SOUTH);
 		setVisible(true);
 
 		if (resChoisie != null){
-			this.listeRessources.removeItemAt(0);
-			this.ressources     .remove(0);
+			this.ddlstRessources.removeItemAt(0);
+			this.lstRessources  .removeFirst();
 			
-			this.listeRessources.setSelectedItem(resChoisie);
+			this.ddlstRessources.setSelectedItem(resChoisie);
 			
-			this.listeNotions.removeAllItems();
+			this.ddlstNotions.removeAllItems();
 			for (Notion notion : this.ctrl.getNotionsParRessource(resChoisie)) {
-				this.listeNotions.addItem(notion);
+				this.ddlstNotions.addItem(notion);
 			}
-			this.listeNotions.setSelectedItem(notionChoisie);
-			this.listeNotions.setEnabled(true);
+			this.ddlstNotions.setSelectedItem(notionChoisie);
+			this.ddlstNotions.setEnabled(true);
 		}
 	}
 
 	// Methode
 	private void secondeValide() {
-		String timeText = this.champTemps.getText();
+		String timeText = this.txtTemps.getText();
 
 		if (timeText.matches("\\d{2}:\\d{2}")) {
 			int minutes  = Integer.parseInt(timeText.substring(0, 2));
@@ -281,7 +284,7 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 			// Vérifie que les secondes ne dépassent pas 59
 			if (secondes >= 60) {
 				secondes  = 59;
-				this.champTemps.setText(String.format("%02d:%02d", minutes, secondes));
+				this.txtTemps.setText(String.format("%02d:%02d", minutes, secondes));
 				JOptionPane.showMessageDialog(
 						this, "Les secondes ne peuvent pas dépasser 59. Ajustement automatique effectué."
 				);
@@ -292,7 +295,7 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 			if (minutes > 99) {
 				minutes = 99;
 
-				this.champTemps.setText(String.format("%02d:%02d", minutes, secondes));
+				this.txtTemps.setText(String.format("%02d:%02d", minutes, secondes));
 				JOptionPane.showMessageDialog(
 						this, "Les minutes ne peuvent pas dépasser 99. Ajustement automatique effectué."
 				);
@@ -307,23 +310,23 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 	 */
 	@Override
 	public void itemStateChanged(ItemEvent e) {
-		if (e.getSource() == this.listeRessources && e.getStateChange() == ItemEvent.SELECTED) {
-			if (this.listeRessources.getItemAt(0).getNom().equals(" ")){
-				this.listeRessources.removeItemAt(0);
-				this.ressources     .remove(0);
-				this.notions        .remove(0);
+		if (e.getSource() == this.ddlstRessources && e.getStateChange() == ItemEvent.SELECTED) {
+			if (this.ddlstRessources.getItemAt(0).getNom().equals(" ")){
+				this.ddlstRessources.removeItemAt(0);
+				this.lstRessources     .remove(0);
+				this.lstNotions        .remove(0);
 			}
 
-			int index = listeRessources.getSelectedIndex();
-			this.listeNotions.removeAllItems();
-			for (Notion notion : this.ctrl.getNotionsParRessource(this.ressources.get(index))) {
-				this.listeNotions.addItem(notion);
+			int index = ddlstRessources.getSelectedIndex();
+			this.ddlstNotions.removeAllItems();
+			for (Notion notion : this.ctrl.getNotionsParRessource(this.lstRessources.get(index))) {
+				this.ddlstNotions.addItem(notion);
 			}
-			listeNotions.setEnabled(true);
-		} else if (e.getSource() == this.listeNotions && e.getStateChange() == ItemEvent.SELECTED) {
-			int indexRessource  = this.listeRessources.getSelectedIndex();
-			int indexNotion     = this.listeNotions.getSelectedIndex();
-			this.notion = ( (Notion)(this.listeNotions.getSelectedItem() )).getNom();
+			ddlstNotions.setEnabled(true);
+		} else if (e.getSource() == this.ddlstNotions && e.getStateChange() == ItemEvent.SELECTED) {
+			int indexRessource  = this.ddlstRessources.getSelectedIndex();
+			int indexNotion     = this.ddlstNotions.getSelectedIndex();
+			this.notion = ( (Notion)(this.ddlstNotions.getSelectedItem() )).getNom();
 			if (indexRessource >= 0 && indexNotion >= 0) {
 
 				this.btnTresFacile.setIcon(IMAGES_DIFFICULTE[0]);
@@ -340,8 +343,18 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 	}
 
 	public void actualiser(){
-		if(this.panelBanque != null) {this.panelBanque.maj();}
-		new FrameCreationQuestion(this.ctrl, this.panelBanque, this.ressources.get(this.listeRessources.getSelectedIndex()), this.notions.get(this.listeNotions.getSelectedIndex()));
+		if(this.panelBanque != null) {
+			this.panelBanque.maj();
+			new FrameCreationQuestion(
+					this.ctrl,
+					this.panelBanque,
+					(Ressource) (this.ddlstRessources.getSelectedItem()),
+					(Notion) (this.ddlstNotions.getSelectedItem() )
+			);
+		} else {
+			new FrameCreationQuestion(this.ctrl, null, null, null);
+		}
+
 		this.frameCreationQuestion.dispose();
 	}
 
@@ -354,21 +367,41 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 		if (e.getSource() == this.btnTresFacile) {
 			JOptionPane.showMessageDialog(this, "Difficulté : Très Facile");
 			this.difficulte = 1;
+
+			this.btnTresFacile.setBorder(this.bordureSelect);
+			this.btnFacile    .setBorder(this.bordureDefaut);
+			this.btnMoyen     .setBorder(this.bordureDefaut);
+			this.btnDifficile .setBorder(this.bordureDefaut);
+
 		} else if (e.getSource() == this.btnFacile) {
 			JOptionPane.showMessageDialog(this, "Difficulté : Facile");
 			this.difficulte = 2;
+			this.btnTresFacile.setBorder(this.bordureDefaut);
+			this.btnFacile    .setBorder(this.bordureSelect);
+			this.btnMoyen     .setBorder(this.bordureDefaut);
+			this.btnDifficile .setBorder(this.bordureDefaut);
+
 		} else if (e.getSource() == this.btnMoyen) {
 			JOptionPane.showMessageDialog(this, "Difficulté : Moyen");
 			this.difficulte = 3;
+			this.btnTresFacile.setBorder(this.bordureDefaut);
+			this.btnFacile    .setBorder(this.bordureDefaut);
+			this.btnMoyen     .setBorder(this.bordureSelect);
+			this.btnDifficile .setBorder(this.bordureDefaut);
+
 		} else if (e.getSource() == this.btnDifficile) {
 			JOptionPane.showMessageDialog(this, "Difficulté : Difficile");
 			this.difficulte = 4;
+			this.btnTresFacile.setBorder(this.bordureDefaut);
+			this.btnFacile    .setBorder(this.bordureDefaut);
+			this.btnMoyen     .setBorder(this.bordureDefaut);
+			this.btnDifficile .setBorder(this.bordureSelect);
 		}
 
 		if (e.getSource() == this.btnConfirmer) {
 			int idMax = 0;
 
-			for(Question q : ctrl.getQuestions())
+			for(Question q : ctrl.getQuestionsParRessource( (Ressource)(this.ddlstRessources.getSelectedItem()) ))
 			{
 				if(q.getId() > idMax)
 				{
@@ -377,118 +410,260 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 			}
 			idMax++;
 
-			System.out.println(this.notion);
-			String cheminDossier = "java/data/" + this.ctrl.getNotionByNom(this.notion).getRessourceAssociee().getNom() + "/" + this.ctrl.getNotionByNom(notion).getNom() + "/Question " + idMax;
 
-			if (this.champPoints.getText().equals(""))
+			String cheminDossier = "java/data/" + this.ctrl.getNotionByNom(this.notion).getRessourceAssociee().getNom()
+					+ "/" + this.ctrl.getNotionByNom(notion).getNom() + "/Question " + idMax;
+
+			if (this.txtPoints.getText().equals(""))
 			{
-				JOptionPane.showMessageDialog(this, "Attribuez des points à la question");
+				JOptionPane.showMessageDialog(
+						this,
+						"Attribuez des points à la question"
+				);
 				return;
 			}
-			if (this.txtaQuestion.getText() == null){
-				JOptionPane.showMessageDialog(this,"Veuillez entrer un énoncer");
+			if (this.epEnonce.getText() == null){
+				JOptionPane.showMessageDialog(
+						this,
+						"Veuillez entrer un énoncer"
+				);
 				return;
 			}
 			if (this.difficulte == 0)
 			{
-				JOptionPane.showMessageDialog(this, "Choisissez une difficulté");
+				JOptionPane.showMessageDialog(
+						this,
+						"Choisissez une difficulté"
+				);
 				return;
 
 			}
-			String typeSelectionne = (String) this.listeTypes.getSelectedItem();
+
+			String typeSelectionne = (String) this.ddlstTypes.getSelectedItem();
+
+
+			this.epEnonce. setText( this.passageRtf(this.epEnonce) );
+			this.epExplication.setText( this.passageRtf(this.epExplication) );
 
 
 			if ("QCM REP. UNIQUE".equals(typeSelectionne)) {
 				System.out.println(typeSelectionne);
-				Notion n = (Notion)(this.listeNotions.getSelectedItem());
+				Notion n = (Notion)(this.ddlstNotions.getSelectedItem());
 				this.notion = n.getNom();
 				this.temps  = Integer.parseInt(
-						this.champTemps.getText().substring(0,this.champTemps.getText().indexOf(":")))*60
-						+ Integer.parseInt(this.champTemps.getText().substring(this.champTemps.getText().indexOf(":")+1)
+						this.txtTemps.getText().substring(
+								0,this.txtTemps.getText().indexOf(":"))
+						)*60
+						+ Integer.parseInt(
+								this.txtTemps.getText().substring(
+										this.txtTemps.getText().indexOf(":")+1
+								)
 				);
-				this.points = Integer.parseInt(this.champPoints.getText());
+				this.points = Integer.parseInt(this.txtPoints.getText());
 
-				PanelQCM panelQCM = new PanelQCM(this, this.ctrl,cheminDossier, this.imageFond, this.lstLiens, this.difficulte,this.notion,this.points,this.temps,this.panelBanque,true, this.txtaQuestion, this.txtexQuestion,idMax);
+				PanelQCM panelQCM = new PanelQCM(
+						this,
+						this.ctrl,
+						cheminDossier,
+						this.imageFond,
+						this.lstLiens,
+						this.difficulte,
+						this.notion,
+						this.points,
+						this.temps,
+						this.panelBanque,
+						true,
+						this.epEnonce,
+						this.epExplication,
+						idMax
+
+				);
 				panelQCM.setVisible(true);
 			} else if ("QCM REP. MULTIPLE".equals(typeSelectionne)) {
 				System.out.println(typeSelectionne);
-				Notion n = (Notion)(this.listeNotions.getSelectedItem());
+				Notion n = (Notion)(this.ddlstNotions.getSelectedItem());
 				this.notion = n.getNom();
-				this.temps  = Integer.parseInt(this.champTemps.getText().substring(0,this.champTemps.getText().indexOf(":")))*60 + Integer.parseInt(this.champTemps.getText().substring(this.champTemps.getText().indexOf(":")+1));
-				this.points = Integer.parseInt(this.champPoints.getText());
+				this.temps  = Integer.parseInt(
+						this.txtTemps.getText().substring(0,this.txtTemps.getText().indexOf(":"))
+						)
+						*60 + Integer.parseInt(
+								this.txtTemps.getText().substring(
+										this.txtTemps.getText().indexOf(":")+1
+								)
+				);
+				this.points = Integer.parseInt(this.txtPoints.getText());
 
-				PanelQCM panelQCM = new PanelQCM(this, this.ctrl,cheminDossier, this.imageFond, this.lstLiens, this.difficulte,this.notion,this.points,this.temps,this.panelBanque,false, this.txtaQuestion, this.txtexQuestion,idMax);
+				PanelQCM panelQCM = new PanelQCM(
+						this,
+						this.ctrl,
+						cheminDossier,
+						this.imageFond,
+						this.lstLiens,
+						this.difficulte,
+						this.notion,
+						this.points,
+						this.temps,
+						this.panelBanque,
+						false,
+						this.epEnonce,
+						this.epExplication,
+						idMax
+				);
+
 				panelQCM.setVisible(true);
 			} else if("EntiteAssociation".equals(typeSelectionne)) {
 				System.out.println(typeSelectionne);
 
-				PanelEntiteAssociation panelEntiteAssociation = new PanelEntiteAssociation(this.ctrl,this.difficulte,this.notion,this.points,this.temps,this.panelBanque);
+				PanelEntiteAssociation panelEntiteAssociation = new PanelEntiteAssociation(
+						this,
+						this.ctrl,
+						cheminDossier,
+						this.imageFond,
+						this.lstLiens,
+						this.difficulte,
+						this.notion,
+						this.points,
+						this.temps,
+						this.panelBanque,
+						this.epEnonce,
+						this.epExplication,
+						idMax
+				);
+
 				panelEntiteAssociation.setVisible(true);
 			} else if ("Elimination".equals(typeSelectionne)){
 				System.out.println(typeSelectionne);
 
-				PanelElimination panelElimination = new PanelElimination(this.ctrl,this.difficulte,this.notion,this.points,this.temps,this.panelBanque);
+				PanelElimination panelElimination = new PanelElimination(
+						this,
+						this.ctrl,
+						cheminDossier,
+						this.imageFond,
+						this.lstLiens,
+						this.difficulte,
+						this.notion,
+						this.points,
+						this.temps,
+						this.panelBanque,
+						this.epEnonce,
+						this.epExplication,
+						idMax
+				);
 				panelElimination.setVisible(true);
 			}
 		}
 
 
-		if(e.getSource() == null)
+		if(e.getSource() == this.btnItalique)
 		{
-			String tmp = "";
-			String tmpMid = "\\b" +  this.txtaQuestion.getSelectedText() + "\\b0";
-			String tmpDeb = this.txtaQuestion.getText().substring(0, this.txtaQuestion.getSelectionStart());
-			String tmpFin = this.txtaQuestion.getText().substring(this.txtaQuestion.getSelectionEnd());
-			tmp = "{\\rtf1\\ansi\\ansicpg1252\\deff0\\nouicompat\\deflang1033{\\fonttbl{\\f0\\fnil\\fcharset0 Arial;}}\\viewkind4\\uc1\\pard\\sa200\\sl276\\slmult1\\f0\\fs22" +
-					tmpDeb + tmpMid + tmpFin + "\\par}";
-			this.txtaQuestion.setText(tmp);
-		}
+			StyledDocument doc;
+			int start;
+			int end;
 
-		if(e.getSource() == this.btnSouligner)
-		{
-			String tmp = "";
-			String tmpMid = "\\ul" +  this.txtaQuestion.getSelectedText() + "\\ul0";
-			String tmpDeb = this.txtaQuestion.getText().substring(0, this.txtaQuestion.getSelectionStart());
-			String tmpFin = this.txtaQuestion.getText().substring(this.txtaQuestion.getSelectionEnd());
-			tmp = "{\\rtf1\\ansi\\ansicpg1252\\deff0\\nouicompat\\deflang1033{\\fonttbl{\\f0\\fnil\\fcharset0 Arial;}}\\viewkind4\\uc1\\pard\\sa200\\sl276\\slmult1\\f0\\fs22" +
-					tmpDeb + tmpMid + tmpFin + "\\par}";
-			this.txtaQuestion.setText(tmp);
+
+			if(this.epExplication.getSelectedText() != null && !this.epExplication.getSelectedText().isEmpty())
+			{
+				doc = (StyledDocument) this.epExplication.getDocument();
+				start = this.epExplication.getSelectionStart();
+				end = this.epExplication.getSelectionEnd();
+
+			}else{
+				if(this.epEnonce.getSelectedText() != null &&
+						!this.epEnonce.getSelectedText().isEmpty())
+				{
+					doc = (StyledDocument) this.epEnonce.getDocument();
+					start = this.epEnonce.getSelectionStart();
+					end = this.epEnonce.getSelectionEnd();
+				}else{
+					return;
+				}
+			}
+
+			if (start != end) {
+
+				Element element = doc.getCharacterElement(start);
+				AttributeSet attributes = element.getAttributes();
+				boolean isItalic = StyleConstants.isItalic(attributes);
+
+				StyleContext context = new StyleContext();
+				Style italicStyle = context.addStyle("Italic", null);
+				StyleConstants.setItalic(italicStyle, !isItalic);
+
+				doc.setCharacterAttributes(start, end - start, italicStyle, false);
+			} else {
+				JOptionPane.showMessageDialog(
+						null, "Sélectionnez un texte pour le mettre en Italic."
+				);
+			}
+            this.epExplication.setSelectionStart(0);
+            this.epExplication.setSelectionEnd(0);
+            this.epEnonce.setSelectionStart(0);
+            this.epEnonce.setSelectionEnd(0);
 		}
 
 
 		if(e.getSource() == this.btnGras)
 		{
-			StyledDocument doc = (StyledDocument) this.txtaQuestion.getDocument();
-			int start = this.txtaQuestion.getSelectionStart();
-			int end = this.txtaQuestion.getSelectionEnd();
+			StyledDocument doc;
+			int start;
+			int end;
 
-			if (start != end) { // Vérifier si une sélection existe
-				// Créer un style pour le gras
-				StyleContext context = new StyleContext();
-				Style boldStyle = context.addStyle("Bold", null);
-				StyleConstants.setBold(boldStyle, true);
+			if(this.epExplication.getSelectedText() != null &&
+					!this.epExplication.getSelectedText().isEmpty())
+			{
+				doc = (StyledDocument) this.epExplication.getDocument();
+				start = this.epExplication.getSelectionStart();
+				end = this.epExplication.getSelectionEnd();
 
-				// Appliquer le style au texte sélectionné
-				doc.setCharacterAttributes(start, end - start, boldStyle, false);
-			} else {
-				JOptionPane.showMessageDialog(null, "Sélectionnez un texte pour le mettre en gras.");
+			}else{
+				if(this.epEnonce.getSelectedText() != null &&
+						(!this.epEnonce.getSelectedText().isEmpty()))
+				{
+					doc = (StyledDocument) this.epEnonce.getDocument();
+					start = this.epEnonce.getSelectionStart();
+					end = this.epEnonce.getSelectionEnd();
+				}else{
+					return;
+				}
 			}
+
+			if (start != end) {
+
+				Element element = doc.getCharacterElement(start);
+				AttributeSet attributes = element.getAttributes();
+				boolean isBold = StyleConstants.isBold(attributes);
+
+				StyleContext context = new StyleContext();
+				Style style = context.addStyle("Bold", null);
+				StyleConstants.setBold(style, !isBold);
+
+				doc.setCharacterAttributes(start, end - start, style, false);
+			} else {
+				JOptionPane.showMessageDialog(
+						null, "Sélectionnez un texte pour le mettre en Gras."
+				);
+			}
+			this.epExplication.setSelectionStart(0);
+			this.epExplication.setSelectionEnd(0);
+            this.epEnonce.setSelectionStart(0);
+            this.epEnonce.setSelectionEnd(0);
 		}
 
 
-		if(e.getSource() == this.btnAjouterImage)
-		{
+		if(e.getSource() == this.btnAjouterImage)  {
 			JFileChooser fileChooser = new JFileChooser();
 			int returnValue = fileChooser.showOpenDialog(null);
 
-			if(returnValue == JFileChooser.APPROVE_OPTION)
-			{
+			if(returnValue == JFileChooser.APPROVE_OPTION)  {
 				String tmpVerif = fileChooser.getSelectedFile().getAbsolutePath();
 
-				if(tmpVerif.endsWith(".png") || tmpVerif.endsWith(".jpg") || tmpVerif.endsWith(".jpeg"))
-				{
+				if(tmpVerif.endsWith(".png") ||
+						tmpVerif.endsWith(".jpg") ||
+						tmpVerif.endsWith(".jpeg") ) {
+
 					this.imageFond = fileChooser.getSelectedFile().getAbsolutePath();
-				}else{
+					this.btnAjouterImage.setText("Ajoutez une image \n" + tmpVerif);
+				} else {
 					JOptionPane.showMessageDialog(null, "Vous ne devez choisir que des images en .jpg, .png ou .jpeg", "Information", JOptionPane.ERROR_MESSAGE);
 				}
 			}
@@ -503,6 +678,23 @@ public class PanelCreationQuestion extends JPanel implements ActionListener, Ite
 			{
 				this.lstLiens.add(fileChooser.getSelectedFile().getAbsolutePath());
 			}
+		}
+	}
+
+
+	private String passageRtf(JEditorPane editeur)
+	{
+		//Mise en place du Rtf
+		RTFEditorKit rtfKit = new RTFEditorKit();
+		StyledDocument doc = (StyledDocument) editeur.getDocument();
+
+		try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream())
+		{
+			rtfKit.write(outputStream, doc, 0, doc.getLength());
+			return outputStream.toString();
+		} catch (Exception e) {
+			e.printStackTrace();
+			return null;
 		}
 	}
 }
